<resources>
    <string name="app_name">TO_DO_20ii</string>
    <string name="show">Show</string>
    <string name="hint_phonenumber">Enter a phone number</string>
    <string name="phonenumber_label">Phone Number:</string>
    <string name="nothing_entered">Nothing entered</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>