<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="increment"
        android:text="@string/count"
        android:layout_gravity="center"
/>
    <EditText
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/hint"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="550dp" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:onClick="Send"
        android:text="Send"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="658dp" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/teal_200"
        android:layout_marginTop="50dp"
        android:text="Reply Message Received"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="265dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="115dp" />
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>